[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Prototipo/Medidores/Comida_2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Prototipo/Medidores/Comida_1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Prototipo/Medidores/Comida_3.png" type="Texture" id=3]
[ext_resource path="res://Assets/Prototipo/Medidores/Comida_5.png" type="Texture" id=4]
[ext_resource path="res://Assets/Prototipo/Medidores/Comida_4.png" type="Texture" id=5]
[ext_resource path="res://scripts/comida.gd" type="Script" id=6]

[node name="comida" type="Node2D"]
position = Vector2( -3.04535, -8.40894 )
script = ExtResource( 6 )

[node name="Comida_1" type="Sprite" parent="."]
position = Vector2( 467.959, 267.943 )
texture = ExtResource( 2 )

[node name="Comida_2" type="Sprite" parent="."]
visible = false
position = Vector2( 468.959, 297.579 )
texture = ExtResource( 1 )

[node name="Comida_3" type="Sprite" parent="."]
visible = false
position = Vector2( 461.232, 339.305 )
texture = ExtResource( 3 )

[node name="Comida_4" type="Sprite" parent="."]
visible = false
position = Vector2( 433.323, 376.941 )
texture = ExtResource( 5 )

[node name="Comida_5" type="Sprite" parent="."]
visible = false
position = Vector2( 397.687, 398.031 )
texture = ExtResource( 4 )
